2009-10-08  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Don't attempt to fix stereochemistry if unspecified.

2009-10-06  Noel O'Boyle  <baoilleach@gmail.com>

	* src/forcefield.cpp: Correctly handle SteepestDescent and Conjugate
	Gradients where nsteps is 0 or 1

2009-10-05  Noel O'Boyle  <baoilleach@gmail.com>

	* src/forcefield.cpp: In ff.GetConformers(mol) if only a single
	conformer was generated it was not being copied.

2009-10-04  Noel O'Boyle  <baoilleach@gmail.com>

	* For Windows build, enable tests to be run in either Debug or Release
	build. Make the default solution file include the tests. Add a target
	for a minimal build.

2009-10-03  Noel O'Boyle  <baoilleach@gmail.com>

	* Update Windows build to use the InChI dll, and to build everything
	to the same folder (e.g. Release or Debug). Tests can be run in Debug
	build.

2009-10-03  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Update handling of stereochemistry to use new
	stereochemistry objects. For tetrahedral centres, stereochemistry is
	currently not corrected if there are three ring bonds on the centre.
	* src/forcefield.cpp: Fixed bug where the SystematicRotorSearch was
	missing the angle 0.

2009-07-31  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* NEWS: Bump for 2.2.3 release.

2009-07-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mmcifformat.cpp: Fix PR2824247 and 2824502,
	Contributed by Raik Brinkmann.

2009-08-16  Chris Morley

	* src/dlhandler_win32.cpp(getConvDirectory):changes which should affect
	only MSVC build. Get handle of this module, not the exe file. As found by
	Noel and by Mingyue Zheng this broke the Python bindings. 
	Correct the module name (different when debugging).
	OpenBabel2.2.3b_Windows_Installer.exe has this mod.
	
	* include/openbabel/dlhandler.h: minor doc change

2009-09-30  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Reapplied Geoff's fix from r3028 (undone in r3251)